# cob_control_sandbox

./: CMakeLists.txt  README.md  package.xml
cob_articulation_controller/: CMakeLists.txt  package.xml  setup.py
cob_articulation_controller/action/: ArticulationModel.action
cob_articulation_controller/include/cob_articulation_controller/: cob_cartesian_trajectories_PID.h
cob_articulation_controller/launch/: cartcollector.launch  cartesian_controller.launch  cartesian_controller_PID.launch  learn_model_prior.launch  move_and_record.launch  move_and_record_vel.launch  move_articulation_model_prior.launch
cob_articulation_controller/msg/: ArticulatedObjectMsg.msg  ModelMsg.msg  TrackMsg.msg
cob_articulation_controller/nodes/: cart_move_and_vel_record.py  cob_articulation_cartcollector.py  cob_articulation_cartcollector_prior.py  cob_move_articulation_model_prior.py
cob_articulation_controller/scripts/: record_models_rotational.py  record_system_behavior.py  record_system_behavior_vel.py  test_learnModelPriorAction.py
cob_articulation_controller/src/: cob_cartesian_trajectories.cpp  cob_cartesian_trajectories_PID.cpp
cob_articulation_controller/src/cob_articulation_models_prior/: __init__.py
cob_articulation_controller/srv/: AlignModelSrv.srv  ArticulatedObjectSrv.srv  CartCollectorPrior.srv  GetModelPriorSrv.srv  MoveModel.srv  MoveRotational.srv  TrackModelSrv.srv
cob_control_sandbox/: CMakeLists.txt  package.xml
cob_mmcontroller/: CMakeLists.txt  package.xml
cob_mmcontroller/include/cob_mmcontroller/: cob_config_controller.h
cob_mmcontroller/launch/: solo.launch  syncmm.launch
cob_mmcontroller/src/: augmented_solver.cpp  cob_config_controller.cpp  kuka_test.cpp  manipulability_publisher.cpp  trajectory_manager.cpp
cob_visual_servoing/: CMakeLists.txt  package.xml
cob_visual_servoing/ros/include/cob_visual_servoing/: cob_follow_arm.h  cob_visual_servoing_pos.h  cob_visual_servoing_vel.h
cob_visual_servoing/ros/src/: cob_follow_arm.cpp  cob_visual_servoing_pos.cpp  cob_visual_servoing_vel.cpp
include/cob_articulation_controller/: cob_cartesian_trajectories_PID.h
include/cob_mmcontroller/: augmented_solver.h  cob_config_controller.h
nodes/: cart_move_and_pose_record.py  cob_learn_model_prior.py  cob_move_articulation_model_prior.py
ros/include/cob_visual_servoing/: cob_visual_servoing.h  cob_visual_servoing_vel.h
ros/src/: cob_visual_servoing.cpp  cob_visual_servoing_vel.cpp
scripts/: test_arm_velocity_controller_gazebo.py  test_articulationModelAction.py  test_cartesian_pose_controller_gazebo.py  test_moveModelPriorAction.py  test_openfidge.py
src/: cob_cartesian_trajectories.cpp  cob_cartesian_trajectories_PID.cpp  cob_config_controller.cpp  cob_mmcontroller.cpp  dual_arm_script.py  kuka_test.cpp  manipulability_publisher.cpp  trajectory_manager.cpp
src/cob_articulation_models_prior/: cob_articulation_models_prior.py
srv/: SetModelPriorSrv.srv
torso/: test_switch_controller.py
